# stm32_template

./: STM32F407VGTx_FLASH.ld
lcd_ssd1306/src/: main.c
rtos/: CMakeLists.txt  startup_stm32f407xx.s
rtos/include/: FreeRTOSConfig.h
rtos/src/: main.c  stubs.c
src/: main.c
template/: CMakeLists.txt  startup_stm32f407xx.s
template/include/: stm32f4xx_it.h
template/src/: main.c
uart/: CMakeLists.txt
uart/src/: main.c
